@@ -581,6 +581,86 @@
     </lens>
 
     <lens>
+        <maker>Chinon</maker>
+        <model>Chinon 75-205mm f/3.8</model>
+        <mount>M42</mount>
+        <cropfactor>1</cropfactor>
+        <calibration>
+            <!-- Taken with Sony Alpha 7 (ICLE-7) -->
+            <vignetting model="pa" focal="75" aperture="3.8" distance="10" k1="0.3190" k2="-2.0971" k3="1.0910"/>
+            <vignetting model="pa" focal="75" aperture="3.8" distance="1000" k1="0.3190" k2="-2.0971" k3="1.0910"/>
+            <vignetting model="pa" focal="75" aperture="4" distance="10" k1="0.3303" k2="-1.9800" k3="0.9760"/>
+            <vignetting model="pa" focal="75" aperture="4" distance="1000" k1="0.3303" k2="-1.9800" k3="0.9760"/>
+            <vignetting model="pa" focal="75" aperture="5.6" distance="10" k1="-0.1344" k2="0.2916" k3="-0.6544"/>
+            <vignetting model="pa" focal="75" aperture="5.6" distance="1000" k1="-0.1344" k2="0.2916" k3="-0.6544"/>
+            <vignetting model="pa" focal="75" aperture="8" distance="10" k1="-0.3694" k2="0.9236" k3="-0.8091"/>
+            <vignetting model="pa" focal="75" aperture="8" distance="1000" k1="-0.3694" k2="0.9236" k3="-0.8091"/>
+            <vignetting model="pa" focal="75" aperture="11" distance="10" k1="-0.2525" k2="0.3376" k3="-0.1929"/>
+            <vignetting model="pa" focal="75" aperture="11" distance="1000" k1="-0.2525" k2="0.3376" k3="-0.1929"/>
+            <vignetting model="pa" focal="75" aperture="16" distance="10" k1="-0.2884" k2="0.3733" k3="-0.1800"/>
+            <vignetting model="pa" focal="75" aperture="16" distance="1000" k1="-0.2884" k2="0.3733" k3="-0.1800"/>
+            <vignetting model="pa" focal="75" aperture="22" distance="10" k1="-0.2964" k2="0.3953" k3="-0.1924"/>
+            <vignetting model="pa" focal="75" aperture="22" distance="1000" k1="-0.2964" k2="0.3953" k3="-0.1924"/>
+            <vignetting model="pa" focal="100" aperture="3.8" distance="10" k1="0.1958" k2="-1.5002" k3="0.7109"/>
+            <vignetting model="pa" focal="100" aperture="3.8" distance="1000" k1="0.1958" k2="-1.5002" k3="0.7109"/>
+            <vignetting model="pa" focal="100" aperture="4" distance="10" k1="0.1918" k2="-1.3460" k3="0.5759"/>
+            <vignetting model="pa" focal="100" aperture="4" distance="1000" k1="0.1918" k2="-1.3460" k3="0.5759"/>
+            <vignetting model="pa" focal="100" aperture="5.6" distance="10" k1="-0.2761" k2="0.6775" k3="-0.7773"/>
+            <vignetting model="pa" focal="100" aperture="5.6" distance="1000" k1="-0.2761" k2="0.6775" k3="-0.7773"/>
+            <vignetting model="pa" focal="100" aperture="8" distance="10" k1="-0.3251" k2="0.6025" k3="-0.4390"/>
+            <vignetting model="pa" focal="100" aperture="8" distance="1000" k1="-0.3251" k2="0.6025" k3="-0.4390"/>
+            <vignetting model="pa" focal="100" aperture="11" distance="10" k1="-0.3032" k2="0.4069" k3="-0.2104"/>
+            <vignetting model="pa" focal="100" aperture="11" distance="1000" k1="-0.3032" k2="0.4069" k3="-0.2104"/>
+            <vignetting model="pa" focal="100" aperture="16" distance="10" k1="-0.3677" k2="0.5158" k3="-0.2504"/>
+            <vignetting model="pa" focal="100" aperture="16" distance="1000" k1="-0.3677" k2="0.5158" k3="-0.2504"/>
+            <vignetting model="pa" focal="100" aperture="22" distance="10" k1="-0.3803" k2="0.5341" k3="-0.2556"/>
+            <vignetting model="pa" focal="100" aperture="22" distance="1000" k1="-0.3803" k2="0.5341" k3="-0.2556"/>
+            <vignetting model="pa" focal="135" aperture="3.8" distance="10" k1="0.2927" k2="-2.1502" k3="1.1829"/>
+            <vignetting model="pa" focal="135" aperture="3.8" distance="1000" k1="0.2927" k2="-2.1502" k3="1.1829"/>
+            <vignetting model="pa" focal="135" aperture="4" distance="10" k1="0.3136" k2="-2.0447" k3="1.0718"/>
+            <vignetting model="pa" focal="135" aperture="4" distance="1000" k1="0.3136" k2="-2.0447" k3="1.0718"/>
+            <vignetting model="pa" focal="135" aperture="5.6" distance="10" k1="-0.1057" k2="0.1636" k3="-0.5443"/>
+            <vignetting model="pa" focal="135" aperture="5.6" distance="1000" k1="-0.1057" k2="0.1636" k3="-0.5443"/>
+            <vignetting model="pa" focal="135" aperture="8" distance="10" k1="-0.4028" k2="0.9480" k3="-0.7900"/>
+            <vignetting model="pa" focal="135" aperture="8" distance="1000" k1="-0.4028" k2="0.9480" k3="-0.7900"/>
+            <vignetting model="pa" focal="135" aperture="11" distance="10" k1="-0.3000" k2="0.3998" k3="-0.2055"/>
+            <vignetting model="pa" focal="135" aperture="11" distance="1000" k1="-0.3000" k2="0.3998" k3="-0.2055"/>
+            <vignetting model="pa" focal="135" aperture="16" distance="10" k1="-0.3587" k2="0.4901" k3="-0.2297"/>
+            <vignetting model="pa" focal="135" aperture="16" distance="1000" k1="-0.3587" k2="0.4901" k3="-0.2297"/>
+            <vignetting model="pa" focal="135" aperture="22" distance="10" k1="-0.3726" k2="0.5133" k3="-0.2387"/>
+            <vignetting model="pa" focal="135" aperture="22" distance="1000" k1="-0.3726" k2="0.5133" k3="-0.2387"/>
+            <vignetting model="pa" focal="160" aperture="3.8" distance="10" k1="0.0474" k2="-1.8459" k3="1.1117"/>
+            <vignetting model="pa" focal="160" aperture="3.8" distance="1000" k1="0.0474" k2="-1.8459" k3="1.1117"/>
+            <vignetting model="pa" focal="160" aperture="4" distance="10" k1="0.1082" k2="-1.8682" k3="1.0876"/>
+            <vignetting model="pa" focal="160" aperture="4" distance="1000" k1="0.1082" k2="-1.8682" k3="1.0876"/>
+            <vignetting model="pa" focal="160" aperture="5.6" distance="10" k1="0.0271" k2="-0.3795" k3="-0.1459"/>
+            <vignetting model="pa" focal="160" aperture="5.6" distance="1000" k1="0.0271" k2="-0.3795" k3="-0.1459"/>
+            <vignetting model="pa" focal="160" aperture="8" distance="10" k1="-0.3564" k2="0.8334" k3="-0.7163"/>
+            <vignetting model="pa" focal="160" aperture="8" distance="1000" k1="-0.3564" k2="0.8334" k3="-0.7163"/>
+            <vignetting model="pa" focal="160" aperture="11" distance="10" k1="-0.2916" k2="0.4063" k3="-0.2101"/>
+            <vignetting model="pa" focal="160" aperture="11" distance="1000" k1="-0.2916" k2="0.4063" k3="-0.2101"/>
+            <vignetting model="pa" focal="160" aperture="16" distance="10" k1="-0.3643" k2="0.5128" k3="-0.2363"/>
+            <vignetting model="pa" focal="160" aperture="16" distance="1000" k1="-0.3643" k2="0.5128" k3="-0.2363"/>
+            <vignetting model="pa" focal="160" aperture="22" distance="10" k1="-0.3811" k2="0.5416" k3="-0.2494"/>
+            <vignetting model="pa" focal="160" aperture="22" distance="1000" k1="-0.3811" k2="0.5416" k3="-0.2494"/>
+            <vignetting model="pa" focal="205" aperture="3.8" distance="10" k1="-0.6163" k2="-0.4532" k3="0.3613"/>
+            <vignetting model="pa" focal="205" aperture="3.8" distance="1000" k1="-0.6163" k2="-0.4532" k3="0.3613"/>
+            <vignetting model="pa" focal="205" aperture="4" distance="10" k1="-0.5062" k2="-0.5978" k3="0.4131"/>
+            <vignetting model="pa" focal="205" aperture="4" distance="1000" k1="-0.5062" k2="-0.5978" k3="0.4131"/>
+            <vignetting model="pa" focal="205" aperture="5.6" distance="10" k1="0.0366" k2="-0.6699" k3="0.1437"/>
+            <vignetting model="pa" focal="205" aperture="5.6" distance="1000" k1="0.0366" k2="-0.6699" k3="0.1437"/>
+            <vignetting model="pa" focal="205" aperture="8" distance="10" k1="-0.3014" k2="0.6473" k3="-0.5930"/>
+            <vignetting model="pa" focal="205" aperture="8" distance="1000" k1="-0.3014" k2="0.6473" k3="-0.5930"/>
+            <vignetting model="pa" focal="205" aperture="11" distance="10" k1="-0.3110" k2="0.4296" k3="-0.2166"/>
+            <vignetting model="pa" focal="205" aperture="11" distance="1000" k1="-0.3110" k2="0.4296" k3="-0.2166"/>
+            <vignetting model="pa" focal="205" aperture="16" distance="10" k1="-0.4544" k2="0.6891" k3="-0.3365"/>
+            <vignetting model="pa" focal="205" aperture="16" distance="1000" k1="-0.4544" k2="0.6891" k3="-0.3365"/>
+            <vignetting model="pa" focal="205" aperture="22" distance="10" k1="-0.4829" k2="0.7455" k3="-0.3655"/>
+            <vignetting model="pa" focal="205" aperture="22" distance="1000" k1="-0.4829" k2="0.7455" k3="-0.3655"/>
+        </calibration>
+    </lens>
+
+    <lens>
         <maker>Voigtländer</maker>
         <model>Voigtlander Super Wide Heliar III</model>
         <model lang="en">Super Wide-Heliar 15mm f/4.5 Aspherical III</model>
