@@ -6,8 +6,11 @@ New interchangeable lenses:
 
 * Canon EF 35mm f/1.4L II USM
 * Canon EF 100-400mm f/4.5-5.6L IS II USM
+* Chinon 75-205mm f/3.8
 * Chinon Auto 35mm f/2.8
 * KMZ Helios-40 85mm f/1.5
+* KMZ Industar-50-2 3.5/50
+* KMZ Jupiter-37AM MC 3.5/135
 * Leica DG Vario-Elmarit 8-18mm f/2.8-4 Asph.
 * Leica DG Nocticron 42.5mm f/1.2 Asph. Power OIS
 * Nikon AI-S Nikkor 105mm f/2.5
@@ -32,6 +35,8 @@ Additional/updated data for:
 * Canon EF 35mm f/2 IS USM
 * Canon EF-S 10-18mm f/4.5-5.6 IS STM
 * Canon EF-S 55-250mm f/4-5.6 IS STM
+* KMZ MC Helios-44M-4 58mm 1:2
+* KMZ MIR-1B 37mm f/2.8
 * Nikon AI-S Nikkor 28mm f/2.8
 * Nikon AI-S Nikkor 55mm f/2.8 Micro
 * Nikon AF-S Nikkor 24-120mm f/4G ED VR
